fix(live-preview): code editor cursor position misaligned
template editor on live previewer is not usable due to a regression introduced from https://github.com/siemens/element/pull/1775

--- a/projects/live-preview/components/si-live-preview/si-live-preview-codeflask.scss
+++ b/projects/live-preview/components/si-live-preview/si-live-preview-codeflask.scss
@@ -61,9 +61,14 @@ $lines-background: element-vars.$element-base-4;
       hyphens: none;
     }
 
+    code {
+      padding: 0;
+    }
+
     .codeflask__flatten,
     .codeflask__code {
       font-family: variables.$font-family-monospace;
+      line-height: 20px;
     }
 
     // this fixes rendering problem during scrolling
